--- a/langchain_v1/package.json
+++ b/langchain_v1/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-ai/generativelanguage": "^0.2.1",
-    "langchain": "^0.0.175"
+    "langchain": "^0.0.175",
+    "dotenv": "^16.0.3"
   }
 }
