--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ DeepLearning_Microsoft_SemanticKernel/.env
 StreamlitApps/.env
 Langchain Parsing Memory Chains/.env
 Langchain Splitting Vector Stores and Embeddings/.env
+Weaviate Implementation/.env
