Added Doc Chat in Pinecone code

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Langchain Parsing Memory Chains/.env
 Langchain Splitting Vector Stores and Embeddings/.env
 Weaviate Implementation/.env
 chroma_db
+PDF Chat/.env
